2016-05-24 0.8.1 alpha
Add seeking with arrow buttons in visualization.
Correct return result of API functions when text encoding is set to Unicode.
Use QPointer to store pointer to dialogs to avoid crashes.
(However crashes related to dbus are still not resolved.)

2016-05-23 0.8.1 alpha
Add horizontal visualization mode.
Add build date in version page.

2016-05-21 0.8.1 alpha
Use QDirIterator instead, fixing plugin loading problems in Windows.
Also scale UI elements.

2016-05-20 0.8.1 alpha
Scale GUI correctly on a high DPI device.
Fix building for Windows. RC-bugs still exist.

2016-05-19 0.8.1 alpha
Added a sample plugin as a template.
Implemented scanPlugin for Windows.

2016-05-18 0.8.1 alpha
Finally finish the particle system integration.
Add std::wstring version APIs to avoid wrong encoding.
Update documentation.

2016-05-17 0.8.1 alpha
Fix bugs in the particle system.
Add particle look at option.

2016-05-16 0.8.1 alpha
Finish the particle system.
It should become a part of SMELT someday.

2016-05-15 0.8.1 alpha
Initial stubs for the particle system.
Use layouts in the effects window.

2016-05-14 0.8.1 alpha
This _should_ fix building under arch linux.
(Linking order problems and include problems).

2016-05-13 0.8.1 alpha
Added enumerate integer options support.
Workaroud for different fonts locations in arch linux.

2016-05-12 0.8.1 alpha
Now channel labels are displayed correctly.
Add an option to change the tint of the chequer board.
Show unsigned integer options in hexadecimal format.
Fixed a crash caused by attemting seeking when no file is
being played.

2016-05-11 0.8.1 alpha
Fixed a bug when piano is hidden but the option "arrange
channels on a stair" is enabled.
Fixed a crash caused by the visualization plugin.
Add channel label display. However it's still buggy so it's
currently disabled.

2016-05-09 0.8.1 alpha
Add visualization documentation stub.

2016-05-07 0.8.1 alpha
Added two new options.